Correct first view height on mobile

--- a/scss/objects/projects/_hero.scss
+++ b/scss/objects/projects/_hero.scss
@@ -6,8 +6,12 @@
   &__inner {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 3rem);
     overflow: hidden;
+
+    @media (min-width: breakpoint("md")) {
+      height: 100vh;
+    }
   }
 
   &__cover {
